--- a/webservice/aftrack/templates/base.html
+++ b/webservice/aftrack/templates/base.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8"/>
 	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" type="text/css" href="static/css/style.css"/>
 	<script language="javascript" src="static/js/jquery-2.1.4.min.js"></script>
 	<script language="javascript" src="static/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container">
-	<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
+	<div class="container">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
@@ -20,16 +21,14 @@
 				<a class="navbar-brand" href="/">Aftrack</a>
 			</div>
 			<div class="collapse navbar-collapse" id="navbar">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-				</ul>
+				{% include 'navbar.html' %}
 			</div>
 		</div>
-	</nav>
+	</div>
+</nav>
+<div class="container">
+	{% block content %}
+	{% endblock %}
 </div>
 </body>
 </html>
