--- a/webservice/aftrack/templates/navbar.html
+++ b/webservice/aftrack/templates/navbar.html
@@ -3,7 +3,7 @@
 <ul class="nav navbar-nav navbar-right">
 	{% if current_user.is_authenticated %}
 		<li class="navbar-text">{{ current_user.first_name }} {{ current_user.last_name }}</li>
-		<li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+		<li><a href="{# url_for('logout') #}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 	{% else %}
 		<li><a href="{{ url_for('login') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 		<li><a href="{# url_for('signup') #}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
