--- a/webservice/aftrack/static/css/style.css
+++ b/webservice/aftrack/static/css/style.css
@@ -1,3 +1,20 @@
+html
+{
+	position:relative;
+	min-height:100%;
+}
+
+body
+{
+	background-color:#F9F9F9;
+	margin-bottom:90px;
+}
+
+.navbar
+{
+	border-radius:0;
+}
+
 form input
 {
 	margin: 3px 0;
@@ -7,5 +24,15 @@ form input
 {
 	padding: 5px;
 	margin-bottom: 12px;
+}
+
+footer
+{
+	position:absolute;
+	bottom:0px;
+	height:60px;
+	border-top: 1px solid #BBB;
+	background-color: #D5D5D5;
+	width:100%
 }
 
