--- a/webservice/aftrack/templates/signup.html
+++ b/webservice/aftrack/templates/signup.html
@@ -8,7 +8,7 @@
 	{% endif %}
 	{% if field.errors %}
 		<div class="alert alert-sm alert-danger">
-			<ul>
+			<ul style="padding-left:17px">
 				{% for error in field.errors %}
 					<li>{{ error }}</li>
 				{% endfor %}
