Show sorted in list

--- a/webservice/aftrack/templates/home_admin.html
+++ b/webservice/aftrack/templates/home_admin.html
@@ -9,10 +9,10 @@
 	<table class="sortable-theme-bootstrap table table-hover" data-sortable>
 		<thead>
 			<tr>
-				<th class="col-xs-3">Date</th>
+				<th class="col-xs-3" data-sorted="true" data-sorted-direction="descending">Date</th>
 				<th class="col-xs-5">Name</th>
-				<th class="col-xs-2">From</th>
-				<th class="col-xs-2">To</th>
+				<th class="col-xs-2" data-sortable="no">From</th>
+				<th class="col-xs-2" data-sortable="no">To</th>
 			</tr>
 		</thead>
 		<tbody>
