--- a/webservice/aftrack/templates/base.html
+++ b/webservice/aftrack/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css"/>
-	<link rel="stylesheet" type="text/css" href="static/css/style.css"/>
-	<script language="javascript" src="static/js/jquery-2.1.4.min.js"></script>
-	<script language="javascript" src="static/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css"/>
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
+	<script language="javascript" src="/static/js/jquery-2.1.4.min.js"></script>
+	<script language="javascript" src="/static/js/bootstrap.min.js"></script>
 	{% block extra_head %}
 	{% endblock %}
 </head>
