--- a/webservice/aftrack/templates/base.html
+++ b/webservice/aftrack/templates/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8"/>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
 	<script language="javascript" src="/static/js/jquery-2.1.4.min.js"></script>
