--- a/webservice/aftrack/templates/navbar.html
+++ b/webservice/aftrack/templates/navbar.html
@@ -1,8 +1,15 @@
 <ul class="nav navbar-nav">
+	<li><a href="{{ url_for('home') }}">Home</a></li>
+	{% if current_user.is_authenticated %}
+		{% if current_user.admin %}
+			<li><a href="{{ url_for('afters_now') }}">Afters</a></li>
+			<li><a href="{{ url_for('users') }}">Users</a></li>
+		{% endif %}
+	{% endif %}
 </ul>
 <ul class="nav navbar-nav navbar-right">
 	{% if current_user.is_authenticated %}
-		<li class="navbar-text">{{ current_user.first_name }} {{ current_user.last_name }}</li>
+		<li><a href="{{ url_for('profile') }}">{{ current_user.first_name }} {{ current_user.last_name }}</a></li>
 		<li><a href="{{ url_for('logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 	{% else %}
 		<li><a href="{{ url_for('signup') }}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
