Add profile editing capabilities

--- a/webservice/aftrack/templates/change_password.html
+++ b/webservice/aftrack/templates/change_password.html
@@ -2,7 +2,7 @@
 
 {% macro render_field(field) %}
 	{{ field.label }}
-	{{ field(class_="form-control") }}
+	{{ field(class_="form-control", value=value) }}
 	{% if field.description %}
 		<span class="help-block">{{ field.description }}</span>
 	{% endif %}
@@ -20,17 +20,17 @@
 {% block content %}
 <form method="post" class="container col-sm-4 col-sm-offset-4">
 	<div class="text-center">
-		<h3 class="page-header">Signup now!</span></h3>
+		<h3 class="page-header">Change password</span></h3>
 	</div>
 	{% if error %}
 		<div class='alert alert-danger'>{{ error }}</div>
 	{% endif %}
 	{{ form.hidden_tag() }}
 	<div class='form-group'>
-	{{ render_field(form.username) }}
-	{{ render_field(form.password) }}
-	{{ render_field(form.repassword) }}
+		{{ render_field(form.old_password) }}
+		{{ render_field(form.new_password) }}
+		{{ render_field(form.repassword) }}
 	</div>
-	<input type="submit" class="btn btn-success btn-block" value="Signup">
+	<input type="submit" class="btn btn-primary btn-block" value="Update">
 </form>
 {% endblock %}
