--- a/webservice/aftrack/templates/profile_edit.html
+++ b/webservice/aftrack/templates/profile_edit.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% macro render_field(field) %}
+{% macro render_field(field, value='') %}
 	{{ field.label }}
-	{{ field(class_="form-control") }}
+	{{ field(class_="form-control", value=value) }}
 	{% if field.description %}
 		<span class="help-block">{{ field.description }}</span>
 	{% endif %}
@@ -20,17 +20,16 @@
 {% block content %}
 <form method="post" class="container col-sm-4 col-sm-offset-4">
 	<div class="text-center">
-		<h3 class="page-header">Signup now!</span></h3>
+		<h3 class="page-header">Edit account</span></h3>
 	</div>
 	{% if error %}
 		<div class='alert alert-danger'>{{ error }}</div>
 	{% endif %}
 	{{ form.hidden_tag() }}
 	<div class='form-group'>
-	{{ render_field(form.username) }}
-	{{ render_field(form.password) }}
-	{{ render_field(form.repassword) }}
+		{{ render_field(form.first_name, user.first_name) }}
+		{{ render_field(form.last_name, user.last_name) }}
 	</div>
-	<input type="submit" class="btn btn-success btn-block" value="Signup">
+	<input type="submit" class="btn btn-primary btn-block" value="Update">
 </form>
 {% endblock %}
