--- a/webservice/aftrack/templates/profile.html
+++ b/webservice/aftrack/templates/profile.html
@@ -6,9 +6,9 @@
 
 {% block content %}
 <div class="page-header text-center">
-	<h1 style="display:inline">
+	<h3 style="display:inline">
 		{{ user.first_name }} {{ user.last_name }}
-	</h1>
+	</h3>
 		{% if user == current_user %}
 			<a href="{{ url_for('profile_edit') }}">Edit</a>
 		{% elif current_user.admin %}
@@ -16,12 +16,13 @@
 		{% endif %}
 </div>
 <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-	<table class="sortable-theme-bootstrap table table-hover" data-sortable>
+	<table class="sortable-theme-bootstrap table table-hover table-responsive" data-sortable>
 		<thead>
 			<tr>
-				<th class="col-xs-6" data-sorted="true" data-sorted-direction="descending">Date</th>
-				<th class="col-xs-3" data-sortable="false">From</th>
-				<th class="col-xs-3" data-sortable="false">To</th>
+				<th class="col-xs-4 col-sm-4" data-sorted="true" data-sorted-direction="descending">Date</th>
+				<th class="col-sm-3" data-sortable="false">From</th>
+				<th class="col-sm-3" data-sortable="false">To</th>
+				<th class="col-sm-2" data-sortable="false"><span class="glyphicon glyphicon-pencil"></span></th>
 			</tr>
 		</thead>
 		<tbody>
@@ -34,6 +35,11 @@
 					<td data-value="{{ after.date.strftime('%s') }}">{{ after.date.strftime('%d/%m/%y') }}</td>
 					<td>{{ after.start.strftime('%H:%M') }}</td>
 					<td>{{ after.end.strftime('%H:%M') if after.end != None else '--:--' }}</td>
+					<td>
+						<a href="{{ url_for('edit_after', after_id=after.id) }}" class="btn btn-sm btn-default">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</a>
+					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
