--- a/webservice/aftrack/templates/signup.html
+++ b/webservice/aftrack/templates/signup.html
@@ -31,6 +31,12 @@
 	{{ render_field(form.password) }}
 	{{ render_field(form.repassword) }}
 	</div>
+	<hr>
+	<div class='form-group'>
+	{{ render_field(form.first_name) }}
+	{{ render_field(form.last_name) }}
+	{{ render_field(form.yearbook) }}
+	</div>
 	<input type="submit" class="btn btn-success btn-block" value="Signup">
 </form>
 {% endblock %}
