--- a/webservice/aftrack/templates/after_edit.html
+++ b/webservice/aftrack/templates/after_edit.html
@@ -20,17 +20,17 @@
 		<div class="col-sm-6">
 			<label for="date">Date</label>
 			<input type="text" class="form-control datepicker" id="date" name="date"
-				value="{{ after.date.strftime('%d/%m/%Y') if after and after.date else '' }}">
+				value="{{ current_user.local_datetime(after.start).strftime('%d/%m/%Y') if after and after.start else '' }}">
 		</div>
 		<div class="col-sm-3">
 			<label for="start">From</label>
 			<input type="text" class="form-control clockpicker" id="start" name="start"
-				value="{{ after.start.strftime('%H:%M') if after and after.start else '' }}">
+				value="{{ current_user.local_datetime(after.start).strftime('%H:%M') if after and after.start else '' }}">
 		</div>
 		<div class="col-sm-3">
 			<label for="end">To</label>
 			<input type="text" class="form-control clockpicker" id="end" name="end"
-				value="{{ after.end.strftime('%H:%M') if after and after.end else '' }}">
+				value="{{ current_user.local_datetime(after.end).strftime('%H:%M') if after and after.end else '' }}">
 		</div>
 	</div>
 	<div class="row text-center" style="margin-top:20px;">
