Replace yearbooks with token signups

--- a/webservice/aftrack/templates/signup.html
+++ b/webservice/aftrack/templates/signup.html
@@ -35,7 +35,7 @@
 	<div class='form-group'>
 	{{ render_field(form.first_name) }}
 	{{ render_field(form.last_name) }}
-	{{ render_field(form.yearbook) }}
+	{{ render_field(form.token) }}
 	</div>
 	<input type="submit" class="btn btn-success btn-block" value="Signup">
 </form>
